gitconfig: Pull ff only

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,3 +7,5 @@
 	logg = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(dim white)%s%C(reset) %C(dim blue)- %an%C(reset)' --all
 	addcw = -c interactive.diffFilter='git diff --color-words' add -p
 	ap = add --patch
+[pull]
+	ff = only
